--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,14 +1,16 @@
 backend:
-  name: github
+  name: proxy
   repo: Rhahloth/HaRie
   branch: main
-  base_url: https://harriecollection-oauth.raysokello.workers.dev
-  auth_endpoint: /auth
+  proxy_url: https://harriecollection-oauth.raysokello.workers.dev
+  auth_endpoint: auth
 
 site_url: https://harriecollection.pages.dev
 media_folder: "assets/img/uploads"
 public_folder: "/assets/img/uploads"
 logo_url: "/assets/img/transparent-logo.png"
+
+publish_mode: editorial_workflow
 
 collections:
   - name: "products"
