--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,9 @@
 backend:
-  name: test-repo
+  name: github
+  repo: Rhahloth/HaRie
+  branch: main
+  base_url: https://harriecollection-oauth.raysokello.workers.dev
+  auth_endpoint: auth
 
 site_url: https://harriecollection.pages.dev
 media_folder: "assets/img/uploads"
